# open-webui-extensions

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.ja.md  README.md  pyproject.toml  release.toml  requirements.txt
.agents/skills/open-webui-plugin-release-builder/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: test.yaml
docs/superpowers/plans/: 2026-05-31-auto-compaction-pipe-checkpoint-plan.md
functions/filter/: current_datetime_injector.py  full_context_mode_toggle.py  graphiti_memory.py  inlet_title_generator.py  token_usage_display.py  user_info_injector.py
functions/pipe/: auto_compaction_pipe.py
open_webui_plugins_builder/: README.md  pyproject.toml
open_webui_plugins_builder/open_webui_plugins_builder/: __init__.py  cli.py  config.py  errors.py  git_io.py  inliner.py  selection.py  smoke.py  version_check.py
open_webui_plugins_builder/tests/: test_cli_integration.py  test_config.py  test_inliner.py  test_selection.py  test_version_check.py
scripts/: build_release.py  lint_tools_class.py
src/owui_ext/: __init__.py
src/owui_ext/shared/: __init__.py  async_utils.py  builtin_tools.py  completion_response.py  event_emitter.py  inlet_filters.py  mcp_tools.py  model_features.py  models.py  notifications.py  parsing.py  prompt_utils.py  skills.py  terminal_events.py  tool_event_metadata.py  tool_execution.py  (+5 more)
tests/: conftest.py  test_open_webui_imports.py
tests/filters/: test_full_context_mode_toggle.py  test_inlet_title_generator.py  test_token_usage_display.py  test_user_info_injector.py
tests/graphiti/: test_delete_graphiti_memory_action.py  test_graphiti_memory_filter.py  test_graphiti_memory_manage.py  test_outlet_nonblocking.py
tests/pipes/: test_auto_compaction_checkpoint.py  test_auto_compaction_manifold.py  test_auto_compaction_messages.py
tests/tools/: conftest.py  test_completion_response.py  test_llm_review_embeds.py  test_llm_review_submission_tools.py  test_memory.py  test_requests_redirect_policy.py  test_terminal_support.py  test_tool_schema_compat.py  test_universal_file_generator_pandoc_zip.py
tools/: graphiti_memory_manage.py  llm_review.py  magi_decision_support.py  memory.py  multi_model_council.py  parallel_tools.py  sub_agent.py  universal_file_generator.py  universal_file_generator_pandoc.py  user_location.py
(+5 files in other folders)
