[project]
name = "open-webui-extensions"
version = "0.1.0"
description = "A collection of extensions for Open WebUI."
readme = "README.md"
requires-python = ">=3.11, <3.13.0"
dependencies = [
    "aiohttp>=3.12.15",
    "graphiti-core[falkordb]>=0.20.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "open_webui_plugins_builder/tests"]
pythonpath = [".", "src", "references/open-webui/backend"]

[tool.pyright]
extraPaths = ["src", "references/open-webui/backend"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.uv.sources]
open-webui = { path = "references/open-webui", editable = true }
open-webui-plugins-builder = { path = "open_webui_plugins_builder", editable = true }

[dependency-groups]
dev = [
    "open-webui",
    "open-webui-plugins-builder",
]
