[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-webui-plugins-builder"
version = "0.1.0"
description = "Single-file release builder for Open WebUI plugin extensions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "skyzi000" }]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
open-webui-plugins-builder = "open_webui_plugins_builder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["open_webui_plugins_builder"]
